<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netlynxtech.advancedmonitor.MainActivity" >

    <item
        android:id="@+id/menu_individual_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:actionViewClass="com.manuelpeinado.refreshactionitem.RefreshActionItem"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit_device"
        android:orderInCategory="100"
        android:title="@string/menu_edit_device"/>
    <item
        android:id="@+id/menu_individual_map"
        android:orderInCategory="100"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menu_individual_chart"
        android:orderInCategory="100"
        android:title="@string/menu_chart"/>
    <item
        android:id="@+id/menu_individual_users"
        android:orderInCategory="100"
        android:title="@string/menu_users"/>

</menu>