<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netlynxtech.advancedmonitor.MainActivity" >

    <item
        android:id="@+id/menu_individual_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:actionViewClass="com.manuelpeinado.refreshactionitem.RefreshActionItem"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_show_messages"
        android:icon="@drawable/ic_message"
        android:orderInCategory="100"
        android:title="@string/menu_show_messages"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add_device"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menu_add_device"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_add_members"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="100"
        android:title="@string/menu_add_members"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_show_requests"
        android:icon="@drawable/ic_action_secure"
        android:orderInCategory="100"
        android:title="@string/menu_show_requests"
        app:showAsAction="ifRoom"/>

</menu>