<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp" >

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/bCheckPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/check_pin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorError="@color/red_error"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textError="Error"
        custom:pb_textProgress="Loading" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bCheckPin"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bCheckPin"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="#ErrorMessage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvGCMID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etPinNo"
        android:text="@string/gcm_id_retrieved_waiting"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etPinNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCheckPin"
        android:layout_alignLeft="@+id/bCheckPin"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/pin_hint"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvStatusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvError"
        android:layout_alignRight="@+id/tvError"
        android:layout_below="@+id/tvError"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

</RelativeLayout>